--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
 <h1>cs104-007 repo</h1>
+
+<p> this is paragraph</p>
+<h2>heading 2</h2>
+<h3>heading 3</h3>
+</html>
